--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@remixicon/react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.79.4"
+    "react-router-dom": "^6.26.2",
+    "remixicon": "^4.3.0",
+    "remixicon-react": "^1.0.0",
+    "sass": "^1.79.4",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
